k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: campusvault

spec:
  selector:
    app: backend

  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080

  type: NodePort
