k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: campusvault

spec:
  selector:
    app: frontend

  type: NodePort

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
